# TeleVision

./: .gitignore  LICENSE  README.md  TeleVision.py  requirements.txt  zed_example.py
act/: README.md  imitate_episodes.py  policy.py  utils.py
act/detr/: main.py
assets/h1_inspire/: CMakeLists.txt  README.md  package.xml
assets/h1_inspire/launch/: check_joint.rviz  display.launch  gazebo.launch
assets/h1_inspire/meshes/: Link12_R.STL.convex.stl  Link13_R.STL.convex.stl  Link14_L.STL.convex.stl  Link14_R.STL.convex.stl  Link15_R.STL.convex.stl  Link16_L.STL.convex.stl  Link16_R.STL.convex.stl  Link17_R.STL.convex.stl  Link20_R.STL.convex.stl  Link22_L.STL.convex.stl  Link22_R.STL.convex.stl  left_ankle_pitch_link.STL  left_ankle_roll_link.STL.convex.stl  left_elbow_pitch_link.STL.convex.stl  left_elbow_roll_link.STL  left_elbow_roll_link.STL.convex.stl  left_wrist_pitch_link.STL.convex.stl  right_ankle_pitch_link.STL.convex.stl  right_elbow_pitch_link.STL  right_elbow_pitch_link.STL.convex.stl  right_elbow_roll_link.STL.convex.stl  right_wrist_pitch_link.STL.convex.stl  torso_link.STL  wrist_yaw_link.STL  wrist_yaw_link.STL.convex.stl
assets/h1_inspire/urdf/: h1_inspire.urdf  h1_inspire_fixed_torso.urdf  h1_inspire_nolimit.urdf
assets/inspire_hand/: inspire_hand_left.urdf  (+1 more)
scripts/: deploy_sim.py  plot_action.py  post_process.py  replay_demo.py
teleop/: Preprocessor.py  TeleVision.py  constants_vuer.py  inspire_hand.yml  motion_utils.py  tele_vision.py  teleop_active_cam.py  teleop_hand.py  teleop_static_cam.py  test_vuer.py  visualize_zed.py
(+32 files in other folders)
